Updated readme. Fixed properties layout breaking by making the table resposive and adding extra css overflow styles.

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -5258,8 +5258,6 @@ a.list-group-item-danger.active:focus {
   background-color: #ffffff;
   border: 1px solid transparent;
   border-radius: 4px;
-  -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
 }
 .panel-body {
   padding: 15px;
